--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ShellView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ShellView.xaml
@@ -6,15 +6,19 @@
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:Vavatech.Shop.WpfClient.Views"
         DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=ShellViewModel}"
-        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"        
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors" xmlns:b="clr-namespace:Vavatech.Shop.WpfClient.Behaviors"
         mc:Ignorable="d"
         Title="ShellView" Height="450" Width="800">
 
-    <i:Interaction.Triggers>
+    <i:Interaction.Behaviors>
+        <b:CloseWindowBehavior />
+    </i:Interaction.Behaviors>
+    
+    <!--<i:Interaction.Triggers>
         <i:EventTrigger EventName="Closing">
             <i:InvokeCommandAction Command="{Binding ExitCommand}" PassEventArgsToCommand="True" />
         </i:EventTrigger>
-    </i:Interaction.Triggers>
+    </i:Interaction.Triggers>-->
 
     <!--<Window.Resources>
 
