--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ShellView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ShellView.xaml
@@ -103,7 +103,7 @@
                         Content="WPF App" />
                 </Border>
 
-                <Button>Home</Button>
+                <Button Command="{Binding ShowViewCommand}" CommandParameter="Home" >Home</Button>
                 <Button Command="{Binding ShowViewCommand}" CommandParameter="Counter" >Counter</Button>
                 
                 <Button Command="{Binding ShowViewCommand}" CommandParameter="Customers">
