--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/App.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/App.xaml
@@ -13,6 +13,7 @@
 
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Images.xaml" />
+                <ResourceDictionary Source="Resources/ControlTemplates.xaml" />
                 <ResourceDictionary Source="Resources/Styles.xaml" />
                 <ResourceDictionary Source="Resources/DataTemplates.xaml" />
             </ResourceDictionary.MergedDictionaries>
