--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Resources/Styles.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Resources/Styles.xaml
@@ -21,6 +21,7 @@
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="Foreground" Value="White" />
         <Setter Property="Margin" Value="5" />
+        <Setter Property="Template" Value="{StaticResource RounderButtonTemplate}" />
     </Style>
 
     <!-- Ustawia wszystkie kontrolki typu Button na domyślny styl -->
