--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/CustomersView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/CustomersView.xaml
@@ -160,10 +160,41 @@
         
         <StackPanel Grid.Column="1" DataContext="{Binding SelectedCustomer}">
 
+                <StackPanel.Resources>
+
+                    <ControlTemplate x:Key="ErrorTemplate">
+                        <DockPanel>
+                            <Border BorderBrush="Red" BorderThickness="3">
+
+                                <AdornedElementPlaceholder />
+                                
+                            </Border>
+                        </DockPanel>
+                    </ControlTemplate>
+                   
+                    <Style TargetType="TextBox">
+                        <Setter Property="Validation.ErrorTemplate" Value="{StaticResource ErrorTemplate}" />
+                        <Style.Triggers>
+                            <Trigger Property="Validation.HasError" Value="True" >
+                                
+                                <!--<Setter Property="ToolTip"  
+                                        Value="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors)/ErrorContent}" />-->
+
+                                <Setter Property="ToolTip"
+                                        Value="{Binding RelativeSource={RelativeSource Mode=Self}, Path=(Validation.Errors)/ErrorContent}" />
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                  
+
+                </StackPanel.Resources>
+
             <TextBlock FontWeight="Bold" FontSize="16" Text="{Binding FullName}" />
 
             <Label>First name</Label>
-            <TextBox Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
+            <TextBox
+                Validation.ErrorTemplate="{StaticResource ErrorTemplate}"
+                Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
 
             <Label>Last name</Label>
              <TextBox Text="{Binding LastName,UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
