--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ProductsView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ProductsView.xaml
@@ -64,6 +64,9 @@
                 <TextBox Text="{Binding Discount}" 
                          IsReadOnly="{Binding ElementName=IsDiscountCheckBox, Path=IsChecked, Converter={StaticResource NegativeConverter }}" />
             </DockPanel>
+
+
+            <Button Background="DarkBlue" Command="{Binding ElementName=Products, Path=DataContext.RecalculateCommand}" Content="Reculate"></Button>
             
         </StackPanel>
 
