--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ProductsView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ProductsView.xaml
@@ -67,7 +67,14 @@
 
 
             <Button Background="DarkBlue" Command="{Binding ElementName=Products, Path=DataContext.RecalculateCommand}" Content="Reculate"></Button>
-            
+
+            <ProgressBar Minimum="0" Maximum="100" 
+                         Height="10"
+                         Margin="10"
+                         Value="{Binding ElementName=Products, Path=DataContext.CurrentId}" />
+
+            <Button Background="DarkRed" Command="{Binding ElementName=Products, Path=DataContext.CancelRecalculateCommand}" Content="Cancel"></Button>
+
         </StackPanel>
 
 
