--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/HomeView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/HomeView.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Vavatech.Shop.WpfClient.Views"
+      xmlns:cc="clr-namespace:Vavatech.Shop.WpfClient.CustomControls"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="HomeView">
@@ -82,5 +83,13 @@
             </Button.RenderTransform>
 
         </Button>
+
+
+        <cc:MyControl Width="100" Height="100" Background="DarkRed"
+                      Foreground="White" MyAngle="{Binding ElementName=RotateAngle, Path=Value}" >
+
+            <TextBox>Hello</TextBox>
+        </cc:MyControl>
+
     </StackPanel>
 </Page>
