--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/SettingsView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/SettingsView.xaml
@@ -13,7 +13,10 @@
         <c:RGBToColorConverter x:Key="RGBToColorConverter" />
     </Page.Resources>
 
-    <Grid>
+    
+    <Grid TextBoxBase.PreviewKeyDown="Grid_PreviewKeyDown"  ButtonBase.Click="Button_Click"
+          
+          HorizontalAlignment="Right" Width="800">
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
@@ -21,11 +24,40 @@
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
+
+            <RowDefinition />
+
             <RowDefinition />
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <DockPanel Margin="40">
+
+        <UniformGrid >
+            <UniformGrid.Resources>
+                <Style TargetType="Button">
+                    <Setter Property="Background" Value="DarkGreen" />
+                    <Setter Property="Margin" Value="5" />
+                </Style>
+            </UniformGrid.Resources>
+            <Button>1</Button>
+            <Button>2</Button>
+            <Button>3</Button>
+            <Button>4</Button>
+            <Button>
+                <StackPanel Orientation="Horizontal">
+                    <Button>5 A</Button>
+                    <Button>5 B</Button>
+                </StackPanel>
+                
+            </Button>
+            <Button>6</Button>
+            <Button>7</Button>
+            <Button>8</Button>
+            <Button>9</Button>
+            <TextBox></TextBox>
+        </UniformGrid>
+
+        <DockPanel Margin="40" Grid.Row="1">
 
             <DockPanel.Resources>
                 <Style TargetType="Slider">
@@ -45,7 +77,7 @@
 
         </DockPanel>
 
-        <Grid Grid.Column="1">
+        <Grid Grid.Column="1" Grid.Row="1">
             <Ellipse Width="200" Height="200" >
 
                 <Ellipse.Fill>
@@ -68,8 +100,10 @@
         <Image 
            Stretch="Uniform"
             Grid.Column="0"
-            Grid.Row="1"
+            Grid.Row="2"
             Source="{StaticResource SettingsImage}" />
 
     </Grid>
+
+
 </Page>
